# PyVatsim

./: pyproject.toml  readme.md
.github/workflows/: ci.yaml
examples/: example.py  geo.py
pyvatsim/: __init__.py  fetchers.py  liveapi.py
tests/: conftest.py  test_dataclasses.py  test_fetchers.py  test_types.py
