[tool.poetry]
name = "pyvatsim"
version = "0.1.2"
authors = [
  "Ken Greim <ken.greim+vatsimapi@gmail.com>",
]
description = "Library to access Vatsim live data and APIs"
readme = "readme.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.1.9"

[tool.pytest.ini_options]
addopts = "--cov=pyvatsim"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 90
exclude = [ "pyvatsim/liveapi.py" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
